--- a/foundations/class-id-selectors-me/index.html
+++ b/foundations/class-id-selectors-me/index.html
@@ -9,7 +9,7 @@
     <body>
         <p class="odd-number-element">Number 1 - I'm a class!</p>
         <div id="second-element">Number 2 - I'm one ID.</div>
-        <p class="odd-number-element" id="third-element">Number 3 - I'm a class, but cooler!</p>
+        <p class="odd-number-element third-element">Number 3 - I'm a class, but cooler!</p>
         <div id="fourth-element">Number 4 - I'm another ID.</div>
         <p class="odd-number-element">Number 5 - I'm a class!</p>
     </body>
