Edit style - after turn in hw - review sol'n

--- a/flex/me-03-flex-header-2/index.html
+++ b/flex/me-03-flex-header-2/index.html
@@ -8,6 +8,8 @@
 
     <body>
         <div class="header">
+            <!-- from solution: div class="left" as a flex container for logo and links. i left mine alone b/c my hw 
+            looks very close to their solution -->
             <div class="logo">
                 LOGO
             </div>
@@ -18,6 +20,8 @@
                 <li><a href="google.com">link-three</a></li>
             </ul>
 
+            <!-- from solution: div class="right" as a flex container for button and profile-image. i left mine alone b/c my hw 
+            looks very close to their solution -->
             <button class="notifications">
                 1 new notification
             </button>
