Edit index and style - after turn in hw - reviewed sol'n

--- a/flex/me-07-flex-layout-2/index.html
+++ b/flex/me-07-flex-layout-2/index.html
@@ -6,7 +6,7 @@
         <title>The Holy Grail</title>
     </head>
 
-    <body>
+    <body>  <!-- good template for a grid using flexbox -->
         <div class="header">
             MY AWESOME WEBSITE
         </div>
